force-app/main/default/objects/PWChrono_Separation_Checklist__c/PWChrono_Separation_Checklist__c.object-meta.xml
<CustomObject>
    <label>Separation Checklist Item</label>
    <nameField>
        <label>Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Separation Checklist Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>