force-app/main/default/objects/PWChrono_Separation_Checklist__c/fields/Separation__c.field-meta.xml
<CustomField>
    <fullName>Separation__c</fullName>
    <label>Separation</label>
    <referenceTo>PWChrono_Employee_Separation__c</referenceTo>
    <relationshipName>Checklist_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>